# xieite

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  alg.hpp  build.sh  evt.cpp  evt.hpp  fs.cpp  fs.hpp  geom.cpp  geom.hpp  io.cpp  io.hpp  mat.hpp  math.hpp  num.hpp  os.hpp  str.cpp  str.hpp  test.sh  time.hpp  vect.hpp
docs/: BigInt.md  Timer.md  algorithms.md  bits.md  concepts.md  console.md  containers.md  errors.md  exceptions.md  functions.md  functors.md  geometry.md  graphics.md  hash.md  hashes.md  literals.md  logic.md  macros.md  math.md  memory.md  meta.md  metadata.md  network.md  preprocessor.md  process.md  random.md  ranges.md  ratios.md  streams.md  string.md  strings.md  system.md  terminal.md  threads.md  time.md  traits.md  types.md  units.md  xieite.md
include/: xieite.hpp
src/: BigInt.cpp  EventEmitter.cpp  Interval.cpp  Timer.cpp  abs.cpp  add_overflow.cpp  almost_eq.cpp  any.cpp  apply_array.cpp  avail_mem.cpp  avg.cpp  big_endify.cpp  bit_field.cpp  bit_join.cpp  bit_mash.cpp  bit_reverse.cpp  bit_size.cpp  byte_fill.cpp  color.cpp  copy_const.cpp  copy_cvref.cpp  copy_volatile.cpp  copy_volatile_data.cpp  cos.cpp  dbl_mul.cpp  dbl_uint.cpp  dist_args.cpp  div_down.cpp  div_half_down.cpp  div_half_to_inf.cpp  div_half_to_zero.cpp  div_half_up.cpp  div_to_zero.cpp  div_up.cpp  djb2.cpp  dynamic_md_container.cpp  evt.cpp  exp.cpp  exp_overflow.cpp  factorial.cpp  (+141 more)
test/: abs.cpp  add_overflow.cpp  is_arith.cpp  test.hpp  try_unsigned.cpp
util/: alg.hpp  algorithm.h  algorithm.hpp  ansi.hpp  console.cpp  console.h  console.hpp  file.cpp  file.h  file.hpp  fs.cpp  fs.hpp  (+28 more)
(+8563 files in other folders)
